api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: siiid
      tier: api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: siiid
        tier: api-gateway
    spec:
      containers:
      - name: siiid
        image: gcr.io/siiid-prd/siiid-backend-gk:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: agd-port
          containerPort: 8080
