api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siiid-api
spec:
  selector:
    matchLabels:
      app: siiid
      tier: api-server
  replicas: 1
  template:
    metadata:
      labels:
        app: siiid
        tier: api-server
    spec:
      containers:
      - name: siiid
        image: gcr.io/siiid-prd/siiid-backend-sv:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        ports:
        - containerPort: 5001
      volumes:
      - name: google-cloud-key
        secret:
          secretName: app-key
