web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: siiid
      tier: web
  replicas: 1
  template:
    metadata:
      labels:
        app: siiid
        tier: web
    spec:
      containers:
      - name: siiid
        image: gcr.io/siiid-prd/siiid-web:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: web-d-port
          containerPort: 65431
