api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siiid-api
  labels:
    app: siiid
spec:
  ports:
  - port: 5001
  selector:
    app: siiid
