frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siiid-frontend
  labels:
    app: siiid
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"siiid-f-port":"siiid-backend-config"}}'
spec:
  type: NodePort
  ports:
  - name: siiid-f-port
    port: 80
    targetPort: front-server
  selector:
    app: siiid
