web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siiid-web
  labels:
    app: siiid
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"web-s-port":"siiid-backend-config"}}'
spec:
  type: NodePort
  ports:
  - name: web-s-port
    port: 80
    targetPort: web-d-port
  selector:
    app: siiid
